--- a/_config.yml
+++ b/_config.yml
@@ -13,12 +13,13 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Music, Poetry and Computer Science
+title: Music, Poetry and Science
 email: kovid.rathee@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Here I write about things I like, things I care about and things that have
+  consumed me over the past couple of years. The list of such things keeps
+  getting updated. For instance, cricket is no more a thing I care about.
+  Although, it consumed me at one point in time.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
