--- a/_config.yml
+++ b/_config.yml
@@ -14,16 +14,15 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Music, Poetry and Science
+title: There's No Title of This Blog Yet
 email: kovid.rathee@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   I write about things I like, things I care about and things that have
-  consumed me over the past couple of years. The list of such things keeps
-  getting updated. For instance, cricket is no more a thing I care about.
-  Although, it consumed me at one point in time.
+  consumed me over the past couple of years.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
+
 github_username:  kovid-rathee
 instagram_username:  khayali.pulaav
 
